tests/samples/negative/types/noncopy_conditional_move_use.ax
module noncopy_conditional_move_use;

noncopy struct Owner {
    value: i32;
}

fn make_owner(value: i32) -> Owner {
    return Owner { value: value };
}

fn consume(owner: Owner) -> i32 {
    return owner.value;
}

fn main() -> i32 {
    var owner: Owner = make_owner(7);
    if true {
        let taken: Owner = move(owner);
        consume(move(taken));
    }
    return consume(move(owner));
}
